--- a/pre-registration-ui/package.json
+++ b/pre-registration-ui/package.json
@@ -14,7 +14,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.13.0",
     "@angular/animations": "7.2.0",
     "@angular/cdk": "^7.2.1",
     "@angular/common": "7.2.0",
@@ -42,7 +41,8 @@
     "ng2-pdf-viewer": "^5.3.3",
     "ngx-mat-select-search": "^1.8.0",
     "ngx-print": "^1.1.4",
-    "ngx7-material-keyboard": "^0.1.2",
+    "@ngx-material-keyboard/core": "^0.1.1",
+    "rxjs-compat": "^6.6.7",
     "ol": "^5.3.0",
     "osm": "^1.0.0",
     "rxjs": "^6.0.0",
@@ -51,6 +51,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.13.10",
     "@angular/cli": "7.2.1",
     "@angular/compiler-cli": "7.2.0",
     "@angular/language-service": "7.2.0",
